--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel=¨stylesheet¨ type=¨text/css¨ href="style.css">
+    <title>Rock Paper Scissor</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <button onclick="document.location='oldIndex.html'">
+      <a>Old Version</a>
+    </button>
     <script src="index.js"></script>
   </body>
 </html>
